UI refinements, bug fixes: adjusts css governing background color of menu page so that it covers the entire page height. Removes code blocks with manually added bounty entries on bounty page so that we can start displaying them from a list. Moves responsibility for calculating order total from shopping cart component to cart service.

--- a/src/app/menupage/menupage.component.scss
+++ b/src/app/menupage/menupage.component.scss
@@ -1,6 +1,6 @@
 .menu-background {
-  background: #4d4d3dda;
-  height: 100%;
+  background-color: #4d4d3dda;
+  padding: 0 0;
 }
 
 .menu-section {
